# tensorflow

tensorflow/lite/: BUILD
tensorflow/lite/tools/cmake/: CMakeLists.txt  Findeigen.cmake  Findfarmhash.cmake  Findfft2d.cmake  Findflatbuffers.cmake  Findgemmlowp.cmake  Findneon2sse.cmake  Findruy.cmake  OverridableFetchContent.cmake  README.md  abseil-cpp.cmake  absl-config.cmake  eigen.cmake  farmhash.cmake  fft2d.cmake  flatbuffers.cmake  gemmlowp.cmake  neon2sse.cmake  ruy.cmake
tensorflow/lite/tools/cmake/farmhash/: CMakeLists.txt
tensorflow/lite/tools/cmake/fft2d/: CMakeLists.txt
tensorflow/lite/tools/cmake/gemmlowp/: CMakeLists.txt
tensorflow/lite/tools/cmake/ruy/: CMakeLists.txt
tensorflow/lite/tools/pip_package/: README.md  setup_with_bazel.py
